...
            android:gravity="center_horizontal|center"
            android:text="TextView"
            android:textIsSelectable="true"
            android:textSize="28sp" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:ems="10"
            android:gravity="center_horizontal|center"
            android:inputType="textPersonName" />


        <Button
            android:id="@+id/checkButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="84dp"
            android:text="Check" />

    </LinearLayout>
...
