<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:orientation="vertical"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:layout_gravity="center"
    tools:context="ru.spbau.mit.dictionary.AddWordActivity">

    <ProgressBar
        android:id="@+id/progressbar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:max="100"
        android:backgroundTint="@color/cardview_light_background"
        android:indeterminateTint="#1a09d6"
        android:layout_marginTop="-7dp"/>

    <TextView
        android:id="@+id/wordTextView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:textSize="32sp"/>

    <ImageView
        android:id="@+id/wordImage"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/imagenotavailable" />
    <Button
        android:id="@+id/saveWord"
        android:text="@string/saveBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>
