<resources>
    <string name="app_name">Dictionary</string>
    <string name="saveBtn">Save</string>
    <string name="btn_translate">Translate</string>
    <string name="sym_to">-></string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="err_not_found_in_dictionary">Text not found in dictionary</string>
    <string name="err_common">Can\'t translate message. Please check internet connection. Possibe it\'s internal error</string>
    <string name="translating">Translating</string>
    <string name="please_wait">Please wait</string>
    <string name="title_activity_list_words">ListWordsActivity</string>
    <string name="btn_add_word">Add word</string>
    <string name="word">word</string>
    <string name="translate">translate</string>
    <string name="about">О приложении</string>
    <string name="settings">Настройки</string>
    <string name="test">Тест</string>
    <string name="search">Поиск</string>
    <string name="text">"asjdbhakdksjdnlasdnslkdma;sdm;asmld;amls;dlma
            ;smd;ams;dmalsdkmkamsdlkmlnajsdnjlasdasjdbhakdksjdnlasdnslkdma;sdm;asmld;amls;dlma
            ;smd;ams;dmalsdkmkamsdlkmlnajsdnjlasdasjdbhakdksjdnlasdnslkdma;sdm;asmld;amls;dlma
            ;smd;ams;dmalsdkmkamsdlkmlnajsdnjlasdasjdbhakdksjdnlasdnslkdma;sdm;asmld;amls;dlma
            ;smd;ams;dmalsdkmkamsdlkmlnajsdnjlasd"</string>
    <string name="title_activity_start_test_word">Test words</string>
    <string name="remove">Удалить</string>
    <string name="to_learned">В изученое</string>
    <string name="words">words</string>
    <string name="answers">\"answers\"</string>
</resources>
