...
                    android:layout_height="wrap_content"
                    android:text="На изучение" />

                <android.support.design.widget.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Изученные" />
            </android.support.design.widget.TabLayout>

        </android.support.design.widget.AppBarLayout>

        <android.support.v4.view.ViewPager
            android:id="@+id/pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/appbar"
            android:layout_gravity="center_vertical|center_horizontal"
            android:padding="5dp"
            android:visibility="visible" />
...
